--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -240,4 +240,28 @@ form {
 }
 
 
+
+/******************************************************/
+/******************************************************/
+/******************DIRECTORY PAGE**********************/
+
+/****List Styling*****/
+.list div {
+    display: flex;
+}
+
+.list div p {
+    
+}
+
+/****Grid Styling*****/
+.grid {
+    grid-template-columns: 1fr 1fr;
+}
+
+
+
+
+
+
 }
