--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -108,7 +108,8 @@ form label.sbs {
 /******************************************************/
 /******************DIRECTORY PAGE**********************/
 
-.list div {
+/****List Styling*****/
+/*.list div {
     display: flex;
 }
 
@@ -118,6 +119,11 @@ form label.sbs {
 
 .group div {
     display: flex;
+}
+*/
+/****Grid Styling*****/
+.grid {
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 
