--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -252,6 +252,12 @@ div.groups.grid {
 
 /****List Styling*****/
 
+div.list h2 {
+    padding: 10px;
+    font-size: 18px;
+    width: 17rem;
+}
+
 .list div {
     display: flex;
     text-align: left;
@@ -262,9 +268,6 @@ div.groups.grid {
     padding: 10px;
 }
 
-#directorytitle {
-    font-size: 16px;
-}
 
 
 /****Grid Styling*****/
