--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -244,6 +244,10 @@ form {
 /******************************************************/
 /******************************************************/
 /******************DIRECTORY PAGE**********************/
+div.groups {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 
 div.groups.list {
     grid-template-columns: 1fr;
