--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -261,19 +261,44 @@ main {
 }
 
 .box3 .temp-box {
-    position: absolute;
-    bottom: 20px;
-    left: 10px;
-    right: 10px;
-    padding: 5px 30px 10px 30px;
-    background-color: #355f5f90;
-    color: #ffffff;
     border: none;
     text-align: center;
 }
 
-.box3 .temp-box img {
+#weathericon {
+    width: 125px;
+    border: none;
+    box-shadow: none;
+}
+
+figcaption {
     padding: 10px;
+    text-transform: capitalize;
+    font-size: 1.2rem;
+    margin-top: -40px;
+}
+
+#weathergrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border: none;
+    box-shadow: none;
+}
+
+#weather1 {
+    font-size: 40px;
+    font-weight: bold;
+    grid-column: 1/2;
+    padding-top: 50px;
+}
+
+#weather2, #weather3 {
+    grid-column: 1/3;
+    padding: 10px;
+}
+
+#weather4 {
+    padding: 0px;
 }
 
 /************** END BOX-3 *****************/
