--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -263,6 +263,7 @@ main {
 .box3 .temp-box {
     border: none;
     text-align: center;
+    height: 100%;
 }
 
 #weathericon {
@@ -289,7 +290,7 @@ figcaption {
     font-size: 40px;
     font-weight: bold;
     grid-column: 1/2;
-    padding-top: 50px;
+    padding-top: 60px;
 }
 
 #weather2, #weather3 {
