--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -124,6 +124,14 @@ div.groups.grid {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+/******************CONTACT PAGE *******************/
+.contact-grid {
+    margin: 20px 250px;
+}
+
+
+
+
 }
 
 
