--- a/templeinn/css/large.css
+++ b/templeinn/css/large.css
@@ -52,6 +52,13 @@
 }
 
 
+/**********************************************/
+/********************** TEMPLES PAGE *************/
+
+#temple-grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
 
 
 
