--- a/templeinn/css/large.css
+++ b/templeinn/css/large.css
@@ -40,7 +40,7 @@
 
 #home-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 #temple-intro {
