--- a/templeinn/css/small.css
+++ b/templeinn/css/small.css
@@ -177,6 +177,25 @@ footer .lastline {
 /*************************************************/
 /********************** TEMPLES PAGE *************/
 
+.templeinfo-button {
+    border: 1px solid black;
+    background-color: pink;
+    padding: 10px;
+    margin: 15px;
+    text-align: center;
+}
+
+.templeinfo-button a {
+    text-decoration: none;
+    font-family: Lobster Two, cursive;
+    font-size: 22px;
+    color: black;
+}
+
+.templeinfo-button:hover {
+    background-color: yellow;
+}
+
 .templeCards {
     display: grid;
     grid-template-columns: 1fr;
@@ -207,6 +226,10 @@ footer .lastline {
     margin: 10px;
     padding: 10px;
     background-color: pink;
+}
+
+.templeCards h3 {
+    margin: 8px 0px 0px 0px;
 }
 
 
