--- a/templeinn/css/large.css
+++ b/templeinn/css/large.css
@@ -56,7 +56,7 @@
 /********************** TEMPLES PAGE *************/
 
 .templeCards {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   
 }
 
@@ -74,7 +74,7 @@
 
 .button-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     margin: 30px;
 }
 
@@ -88,9 +88,16 @@
     grid-column: 2/3;
 }
 
-#temple-btn3 {
-    grid-column: 3/4;
+/*************************************************/
+/********** ORDINANCES SCHEDULE PAGE *************/
+
+#ordinance-grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
 }
+
+
+
 
 
 
