--- a/templeinn/css/medium.css
+++ b/templeinn/css/medium.css
@@ -33,5 +33,18 @@
     grid-template-columns: 1fr 1fr; 
 }
 
+/*************************************************/
+/********** ORDINANCES SCHEDULE PAGE *************/
+
+#ordinance-grid {
+    grid-template-columns: 1fr 1fr;
+
+}
+
+
+
+
+
+
 
 }
