--- a/templeinn/css/small.css
+++ b/templeinn/css/small.css
@@ -184,7 +184,7 @@ footer .lastline {
 
 .t-cards {
     border: 1px solid black;
-    padding: 10px;
+    padding: 10px 10px 25px 10px;
     background-color: #9fc6c6;
 }
 
@@ -223,125 +223,33 @@ footer .lastline {
     margin: 40px;
 }
 
-
-/*
-.templeinfo-button {
-    border: 1px solid black;
-    background-color: #8c9caa;
-    padding: 10px;
-    margin: 25px;
-    text-align: center;
-    border-radius: 5px 5px 5px 5px;
-}
-
-.templeinfo-button a {
-    text-decoration: none;
-    font-family: Lobster Two, cursive;
-    font-size: 22px;
-    color: black;
-}
-
-.templeinfo-button:hover {
-    background-color: #b7c9d9;
-}
-
-.templeCards {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 25px;
-}
-
-.templeCards div {
-    border: 1px solid black;
-    padding: 10px;
-    margin: 0px 25px;
-    background-color: white;
-}
-
-.templeCards img {
-    width: 100%;
-    border: 1px solid black;
-    box-shadow: 3px 3px 10px rgb(54, 54, 54);
-    object-fit: cover;
-}
-
-.templeCards h2 {
-    margin: 8px;
-    text-align: center;
-    font-size: 32px;
-}
-
-.templeCards h4 {
-    border: 1px solid black;
-    text-align: center;
-    margin: 10px;
-    padding: 10px;
-    background-color: rgb(192, 229, 255);
-}
-
-.templeCards h3 {
-    margin: 8px 0px 0px 0px;
-}
-*/
-
-
-
-
 /*************************************************/
 /********** ORDINANCES SCHEDULE PAGE *************/
 
 #back-button a {
+    margin: 25px;
     text-decoration: none;
-    margin: 35px;
-}
-
-#back-button a:hover {
-    color:blue
-} 
-
-#ordinance-grid {
-    display: grid;
-    gap: 15px;
-}
-
-#ordinance-grid h2 {
-    text-align: center;
-    margin: 15px;
-}
-
-#ordinance-grid h3 {
-    text-align: center;
-    margin: 15px;
-}
-
-#ordinance-grid p {
-    line-height: 1.2rem;
-}
-
-
-/*
-#temple-grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 15px;
-}
-
-.t-cards {
     border: 1px solid black;
-    padding: 20px;
-    background-color: #b1d3d3;
+    padding: 10px;
+    border-radius: 5px 5px 5px 5px;
+    background-color: #acdbac;
 }
 
-.temple-button {
-    border: 1px solid black;
-    padding: 5px;
-    margin-top: 10px;
-    text-align: center;
-    background-color: white;
+#json-divs {
+    margin: 25px;
 }
 
-.temple-button a {
-    text-decoration: none;
-    font-family: Lobster Two, cursive;
-    font-size: 24px;
-}*/
+#json-divs h3 {
+    margin: 25px 15px 5px 15px; 
+}
+
+#json-divs h4 {
+    margin: 10px 15px 0px 15px;
+}
+
+#json-divs p {
+    margin: 0px 30px 0px 15px;
+}
+
+
+
