--- a/templeinn/css/medium.css
+++ b/templeinn/css/medium.css
@@ -6,6 +6,10 @@
 
 /********************** Body *************/
 
+.page-intro p {
+    margin: 25px;
+}
+
 /************** Footer ************/
 
 .foot1 {
@@ -24,7 +28,24 @@
 
 /**********************************************/
 /********************** HOME PAGE *************/
+#home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr .5fr 1fr;
+}
 
+#lightTemple {
+    grid-column: 1/2;
+}
+
+#spotlight {
+    grid-row: 2/3;
+    grid-column: 1/3;
+}
+
+#resBtn {
+    margin: 0px 200px 10px 200px;
+}
 
 /**********************************************/
 /********************** TEMPLES PAGE *************/
@@ -37,12 +58,14 @@
 /********** ORDINANCES SCHEDULE PAGE *************/
 
 #json-divs {
-    margin: 35px 100px;
+    margin: 35px 150px;
 }
 
 #back-button a {
-    margin: 100px;
+    margin: 150px;
 }
+
+
 
 
 
