--- a/templeinn/css/medium.css
+++ b/templeinn/css/medium.css
@@ -113,6 +113,28 @@
     margin: 10px 60px;
 }
 
+/*************************************************/
+/***************** CONTACT PAGE ******************/
+
+#contact-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: .5fr .5fr;
+    gap: 15Px;
+}
+
+#hotel-img {
+   grid-column: 1/2;
+} 
+
+#contact-div1 {
+    grid-column: 2/3;
+}
+
+#contact-div2 {
+    grid-column: 1/3;
+}
+
 
 
 
