--- a/templeinn/css/medium.css
+++ b/templeinn/css/medium.css
@@ -61,7 +61,7 @@
     margin: 35px 150px;
 }
 
-#back-button a {
+#back-button {
     margin: 150px;
 }
 
@@ -69,8 +69,8 @@
 /*************************************************/
 /**************** RESERVATION PAGE ***************/
 
-#guestForm {
-    margin: 20px 150px;
+.guestForm {
+    margin: 20px 200px;
 }
 
 
@@ -125,14 +125,17 @@
 
 #hotel-img {
    grid-column: 1/2;
+   margin: 0px 0px 0px 20px;
 } 
 
 #contact-div1 {
     grid-column: 2/3;
+    margin: 0px 20px 0px 0px;
 }
 
 #contact-div2 {
     grid-column: 1/3;
+    margin: 0px 160px 20px 160px;
 }
 
 
